# AlgePy

./: .buildinfo  .gitignore  CITATION.cff  README.md  algepy.html  demo.ipynb  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  src.html
.github/: deploy-docs.yml
.github/workflows/: deploy-docs.yml
_sources/: modules.rst.txt  src.rst.txt
algepy/: QuadraticStructures.py  SingletonStructures.py  __init__.py
complexity/: Analyze.py  analyze_DiscreteFunctions.py  analyze_QuadraticStructures.py  analyze_SingletonStructures.py  generate_report.py
docs/source/: algepy.rst  conf.py  index.rst  modules.rst  src.rst
src/: DiscreteFunctions.py  SingletonStructures.py  __init__.py
tests/: Test_DiscreteFunctions.py  Test_SingletonStructures.py
tests/discreteFunctionsTests/: Test_ArithmeticFunctions.py  Test_Factorization.py  Test_PrimalityTesting.py  Test_PrimeNumberTheorem.py
tests/quadraticStructuresTests/: Test_C.py  Test_Q.py  Test_QuadInt.py  Test_QuadIntRing.py  Test_QuadRat.py  Test_QuadRatField.py
tests/singletonStructuresTests/: Test_R.py  Test_Z.py  Test_Z_mod_.py  Test_Z_n.py
