[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algepy-tools"
authors = [
    { name = "Sucheer Maddury", email = "sm2939@cornell.edu" }
]
version = "0.1.2"
description = "A Python library for efficient number theory and abstract algebra, featuring tools for primality testing, factorization, and advanced modular arithmetic."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["number theory", "algebra", "abstract algebra", "primality", "factorization", "modular arithmetic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sumaddury/algepy"
Documentation = "https://sumaddury.github.io/AlgePy/"
Repository = "https://github.com/sumaddury/algepy"